complete authentication api without roles and permission
